--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -234,7 +234,7 @@ h1 {
 			rgba(208, 162, 52, 0.25), 
 			rgba(208, 162, 52, 0.25)
 	  		),
- 		url("desktop.jpg") no-repeat center center fixed; 
+ 		image-url("desktop.jpg") no-repeat center center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
