--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <body>
 
   <div id="logo">
-    <img id="logo-icon" src="/assets/book.png">
+    <%= image_tag "book.png", id: "logo-icon" %>
     <div id="logo-text">odeBook</div>
   </div>
   <nav id="nav">
